name:          netcdf
version:       0.1.0.0
synopsis:      NetCDF reader/writer
homepage:      http://github.com/jystic/netcdf-hs
license:       BSD3
license-file:  LICENSE
author:        Jacob Stanley
maintainer:    Jacob Stanley <jacob@stanley.io>
category:      Codec
build-type:    Simple
cabal-version: >= 1.6


library
  hs-source-dirs: src

  exposed-modules:
    Data.NetCDF.Serialize
    Data.NetCDF.Types

  build-depends:
      base           == 4.*
    , bytestring     == 0.9.*
    , cereal         == 0.3.*
